# cnn_tutorial

./: .gitignore  mnist_classification.ipynb  pyproject.toml
.ipynb_checkpoints/: mnist_classification-checkpoint.ipynb
models/: description.md
notebooks/: cnn.ipynb  mnist_classification.ipynb  preprocess.ipynb
notebooks/reports/: mnist_classification.ipynb
notebooks/utils/: visualize.py
src/data/: process_mnist.py
