[tool.poetry]
name = "cnn_mnist"
version = "0.1.0"
description = ""
authors = ["Lievi Silva <lievi.silva@luizalabs.com>"]

[tool.poetry.dependencies]
python = "^3.9"
keras = "^2.6.0"
pandas = "^1.3.3"
matplotlib = "^3.4.3"
seaborn = "^0.11.2"
jupyterlab = "^3.1.14"
scikit-learn = "^1.0"
tensorflow = "^2.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
